# automation-25

./: .env.example  .gitignore  README.md  a.py  certificate_config.json  main.py  pyproject.toml  sample_students.csv  setup.sh  start.sh
backend/: certificate.py  certificate_config.json  config.py  edit_certificate_config.py  emailer.py  logger.py  main.py  models.py  requirements.txt  utils.py
frontend/: app.py
